2013-03-19  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.saveEntry): added EntrySelect
	window to insertButton actions.

2013-03-18  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/entryselect.py (EntrySelect): began work on
	EntrySelect window.  Trouble with highlighting and unhighlighting.

2013-03-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBentry.py (AJBentry.shortTitle): added
	shortTitle() method.

2013-03-16  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py: worked out method for
	default symbols.txt file.
	(BookEntry.deleteEntry): added function for Delete Button
	(BookEntry.insertEntry): added initial function for Insert Button

	* Tools/bookentry/*.py: cleaned up import calls

	* Tools/setup.py: modified system to support both an installed
	environment and a development environment.

2013-03-14  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (getargs): split BookEntry.py into
	mainWindow.py and BookEntry which is now a script that just
	runs the main program.  The gui is now in mainWindow.py.

2013-03-13  Jim Fowler  <jrf@Biblion>

	* Tools/setup.py: added setup.py and began defining installation
	process.

	* Tools/src/BookEntry.py (BookEntry.openSymbol): added '-s' flag
	to use altername symbol table. Added setSymbolTableName() method
	as well.

2013-03-08  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry.askOpenFile): Added call
	to self.bf.getDirName() so that I don't have to keep changing
	directories every time I open a file.

	* Tools/src/bookfile.py (BookFile): Added getDirName() method.

2013-03-05  Jim Fowler  <jrf@Biblion>

	* Tools/src/AJBentry.py (AJBentry.write): Corrected problem with
	additional publishers. Was not placing the 'and' between
	publishers since 'first' was never being set to False. This was a
	problem only if there were more than one additional publisher.
	(AJBentry.write): Added comma replacement in other strings.

2013-03-01  Jim Fowler  <jrf@Biblion>
