@@ -39,6 +39,13 @@ entertained, instructed, awed, and inspired by them\ldots
 \end{quote}
 
 
+\begin{quote}
+
+"An image is worth a thousand words, but a spectrum is worth a million," said lead author Ben R. Oppenheimer, associate curator and chair of the Astrophysics Department at the American Museum of Natural History.
+
+http://www.facebook.com/photo.php?fbid=490576217674222&set=a.334832996581879.82450.334816523250193&type=1
+\end{quote}
+
 \backmatter
 
 \bibliographystyle{plain}
